Htlm Helpers Baslangic

--- a/asp.NetMvc/mvcGiris/mvcGiris.csproj
+++ b/asp.NetMvc/mvcGiris/mvcGiris.csproj
@@ -105,6 +105,8 @@
     <None Include="packages.config" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\PostIslemiYapilacak.cshtml" />
+    <Content Include="Views\Home\RazorViewEngine.cshtml" />
+    <Content Include="Views\Home\HtmlHelpers.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
