--- a/asp.NetMvc/mvcGiris/mvcGiris.csproj
+++ b/asp.NetMvc/mvcGiris/mvcGiris.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Library\MyExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
