HttpUtility Sınıfının Bazı Metodları Ve HtmlHelpres Sınıfının Raw Methodu Bitiş

--- a/asp.NetMvc/mvcGiris/mvcGiris.csproj
+++ b/asp.NetMvc/mvcGiris/mvcGiris.csproj
@@ -109,6 +109,7 @@
     <Content Include="Views\Home\RazorViewEngine.cshtml" />
     <Content Include="Views\Home\HtmlHelpers.cshtml" />
     <Content Include="Views\Home\UrlHelper.cshtml" />
+    <Content Include="Views\Home\HttpUtility.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
