Viewlarda Layout Mantığı ve Default Layout ( _ViewStart.cshtml dosyası ) Kullanımı

--- a/asp.NetMvc/Views/Views.csproj
+++ b/asp.NetMvc/Views/Views.csproj
@@ -105,6 +105,10 @@
     <None Include="packages.config" />
     <Content Include="Views\Shared\_LayoutPage1.cshtml" />
     <Content Include="Views\Home\homePage.cshtml" />
+    <Content Include="Views\Home\about.cshtml" />
+    <Content Include="Views\Home\contact.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\_LayoutPage2.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
