--- a/asp.NetMvc/Views/Views.csproj
+++ b/asp.NetMvc/Views/Views.csproj
@@ -109,6 +109,8 @@
     <Content Include="Views\Home\contact.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_LayoutPage2.cshtml" />
+    <Content Include="Views\Shared\_MainLayoutPage.cshtml" />
+    <Content Include="Views\Shared\_ChildLayoutPage.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
